--- a/app/views/application/_global_nav.slim
+++ b/app/views/application/_global_nav.slim
@@ -43,6 +43,12 @@ nav.global-nav.js-show-mobile-nav__target.js-show-mobile-nav
               i.fa.fa-file-o
             .global-nav-links__link-label
               | wiki
+        li.global-nav-links__item.is-hidden-md-up
+          = link_to logout_path, class: "global-nav-links__link" do
+            .global-nav-links__link-icon
+              i.fa.fa-sign-out
+            .global-nav-links__link-label
+              | サインアウト
         - if current_user && current_user.admin?
           li.global-nav-links__item
             = link_to admin_users_path, class: "global-nav-links__link #{current_link('/admin/users')}" do
