--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,5 +1,7 @@
+- question = answer.question
+- correct_answer = question.correct_answer
 .report-comment(class="#{answer == answer.question.correct_answer ? "is-correct_answer" : ""}")
-  - if answer == answer.question.correct_answer
+  - if answer == correct_answer
     .answer-badge
       .answer-badge__icon
         i.fa.fa-star
@@ -17,7 +19,7 @@
         = l answer.updated_at, format: :date_long_with_time
     .report-comments__description.js-markdown-view.js-target-blank.is-long-text-style
       = answer.description
-    - if answer != answer.question.correct_answer && current_user == answer.question.user
+    - if correct_answer.blank? && answer != correct_answer && current_user == question.user
         .answer-item__choice
           = link_to question_correct_answer_path(answer.question, answer_id: answer.id, return_to: question_path(answer.question)), data: { confirm: "本当に宜しいですか？" }, method: :post, class: 'is-button-standard-sm-warning' do
             | 解決にする
