長文のデザイン調整 ベストアンサーバッジのデザイン

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -17,6 +17,8 @@
 
 @import oulu-mixins
 @import modules/buttons/buttons
+@import modules/web-fonts/source-code-pro
+@import settings/mixins/**/*
 
 //////////////////////////////
 // initializers
