--- a/app/assets/stylesheets/blocks/report/_report.sass
+++ b/app/assets/stylesheets/blocks/report/_report.sass
@@ -6,6 +6,7 @@ $report-header-author: 6rem
   padding-left: 5rem
   +media-breakpoint-down(sm)
     padding-left: 0
+    +padding(horizontal, 1rem)
     margin-top: 2.75rem
 
 .report__inner
