--- a/app/assets/stylesheets/settings/variables/_0colors.sass
+++ b/app/assets/stylesheets/settings/variables/_0colors.sass
@@ -22,7 +22,7 @@ $gray-light: #818a91
 $gray-lighter: #eceeef
 $gray-lightest: #f7f7f9
 
-$stamp-color: #f00
+$stamp-color: #ed5151
 $badge-color: #e54724
 
 $primary: #304ca2
