--- a/app/assets/stylesheets/settings/helpers/long-text.sass
+++ b/app/assets/stylesheets/settings/helpers/long-text.sass
@@ -1,87 +1,2 @@
 .is-long-text-style
-  font-size: 1rem
-  +media-breakpoint-down(sm)
-    font-size: .8125rem
-    word-break: break-all
-  h1
-    color: transparent
-    &::before
-      +text-block(1em 1.45 .5em, $reversal-text block)
-      content: "要修正: 本文中の見出しは h1（#）は使わず h2（##）から始めてください"
-      background-color: red
-      padding: .25rem .5rem
-  h2
-    +text-block(1.8em 1.4 .6em)
-    padding-bottom: .2em
-    border-bottom: solid .0625rem $background-color
-  h3
-    +text-block(1.6em 1.4 .6em)
-  h4
-    +text-block(1.4em 1.4 .6em)
-  h5
-    +text-block(1.2em 1.4 .6em)
-  h6
-    +text-block(1em 1.4 .6em)
-  p
-    +text-block(1em 1.8 1.4em)
-  a
-    +default-link
-    +hover-link-reversal
-  p + h1,
-  p + h2,
-  p + h3,
-  p + h4,
-    margin-top: .9em
-  img
-    max-width: 100%
-  >img,
-  a img
-    display: block
-    +margin(horizontal, auto)
-    margin-bottom: 1.4em
-  ul,
-  ol
-    margin-bottom: 1.8em
-    margin-left: 1.6em
-    +media-breakpoint-down(sm)
-      margin-bottom: 1.2em
-  ul
-    list-style: disc outside
-  ol
-    list-style: decimal outside
-  li
-    +text-block(1em 1.8 .8em)
-    ol,
-    ul
-      margin-top: .8em
-    input
-      margin-right: .5em
-  pre
-    margin-bottom: 2rem
-    code
-      +text-block(.8em 2)
-  p
-    code
-      +text-block(.8em 1.6)
-      padding: .125rem .25rem
-      border: solid .0625rem #d9d9d9
-      background-color: #f8f8f8
-      +margin(horizontal, .25rem)
-      border-radius: .25rem
-  .twitter-tweet
-    +margin(horizontal, auto)
-    margin-bottom: 2.5rem !important
-  blockquote
-    border-left: solid .25rem $background-color
-    padding-left: .75rem
-    margin-bottom: 2rem
-  iframe
-    +margin(horizontal, auto)
-    margin-bottom: 2rem
-    display: block
-    max-width: 100%
-  img
-    border: solid .0625rem #eee
-    margin-bottom: 2rem
-  *:last-child
-    margin-bottom: 0
+  +long-text-style(.875rem, .8125rem)
