--- a/app/views/reports/_report.html.slim
+++ b/app/views/reports/_report.html.slim
@@ -23,7 +23,7 @@
             li.report-practices__item
               = link_to practice, class: 'report-practices__item-link' do
                 = practice.title
-    .report__description.js-markdown-view.js-target-blank.is-long-text-style
+    .report__description.js-markdown-view.js-target-blank.is-long-text-style.js-marked
       = report.description
     footer.report__body-footer
       .report__body-footer-container
