--- a/app/views/admin/categories/_form.html.slim
+++ b/app/views/admin/categories/_form.html.slim
@@ -14,7 +14,7 @@
       .row.js-markdown-parent
         .col-md-6.col-xs-12
           = f.label :description, class: 'a-label'
-          = f.text_area :description, class: 'a-textarea js-warning-form js-markdown-input practices-edit__input'
+          = f.text_area :description, class: 'a-textarea js-warning-form js-markdown practices-edit__input'
         .col-md-6.col-xs-12
           .a-label
             | プレビュー
