--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -17,7 +17,7 @@
           = answer.user.login_name
       time.report-comment__created-at(datetime='#{answer.created_at.to_datetime}' pubdate='pubdate')
         = l answer.updated_at, format: :date_long_with_time
-    .report-comments__description.js-markdown-view.js-target-blank.is-long-text-style
+    .report-comments__description.js-markdown-view.js-target-blank.is-long-text-style.js-marked
       = answer.description
     - if correct_answer.blank? && answer != correct_answer && current_user == question.user
         .answer-item__choice
