--- a/app/views/pages/show.html.slim
+++ b/app/views/pages/show.html.slim
@@ -14,7 +14,7 @@ header.page-header
       header.entry-header
         h3.entry-header__title
           = @page.title
-      .entry-body.js-markdown-view.js-target-blank.is-long-text-style
+      .entry-body.js-markdown-view.js-target-blank.is-long-text-style.js-marked
         = @page.body
 
 .form-actions
