--- a/app/views/reports/new.html.slim
+++ b/app/views/reports/new.html.slim
@@ -9,4 +9,4 @@ header.page-header
 
 .page-body
   .container
-    = render 'form', report: @report
+    = render 'form', report: @report, categories: @categories
