--- a/app/views/reports/edit.html.slim
+++ b/app/views/reports/edit.html.slim
@@ -8,4 +8,4 @@ header.page-header
 
 .page-body
   .container
-    = render 'form', report: @report
+    = render 'form', report: @report, categories: @categories
