--- a/app/views/practices/_form.html.slim
+++ b/app/views/practices/_form.html.slim
@@ -14,6 +14,11 @@
           = f.label :title, class: 'a-label'
           = f.text_field :title, class: 'a-text-input js-warning-form'
     .form-item
+      .row
+        .col-md-6.col-xs-12
+          = f.label :task, class: 'a-label'
+          = f.check_box :task, {}, true, false
+    .form-item
       .row.js-markdown-parent
         .col-md-6.col-xs-12
             = f.label :description, class: 'a-label'
