--- a/app/views/application/_global_nav.slim
+++ b/app/views/application/_global_nav.slim
@@ -62,6 +62,12 @@ nav.global-nav.js-show-mobile-nav__target.js-show-mobile-nav
                 i.fa.fa-wrench
               .global-nav-links__link-label
                 = t('categories')
+            li.global-nav-links__item
+              = link_to admin_artifacts_path, class: "global-nav-links__link #{current_link('/admin/artifacts')}" do
+                .global-nav-links__link-icon
+                  i.fa.fa-check-square
+                .global-nav-links__link-label
+                  = t('artifacts')
           li.global-nav-links__item
             = link_to admin_root_path, class: "global-nav-links__link #{current_link('/admin')}" do
               .global-nav-links__link-icon
