--- a/app/views/reports/_form.html.slim
+++ b/app/views/reports/_form.html.slim
@@ -27,13 +27,13 @@
         .col-md-6.col-xs-12
           = f.label :description, class: 'a-label'
           - if @report_copy_flag == true
-            = f.text_area :description, class: "a-textarea js-warning-form markdown-form__text-area js-markdown", data: { "preview-id": "js-preview" }, value: @report_description
+            = f.text_area :description, class: "a-textarea js-warning-form markdown-form__text-area js-markdown", data: { "preview": ".js-preview" }, value: @report_description
           - else
-            = f.text_area :description, class: "a-textarea js-warning-form markdown-form__text-area js-markdown", data: { "preview-id": "js-preview" }
+            = f.text_area :description, class: "a-textarea js-warning-form markdown-form__text-area js-markdown", data: { "preview": ".js-preview" }
         .col-md-6.col-xs-12
           .a-label
             | プレビュー
-          #js-preview.is-long-text-style.markdown-form__preview
+          .js-preview.is-long-text-style.markdown-form__preview
 
   .form-actions
     ul.form-actions__items
