--- a/app/views/practices/_form.html.slim
+++ b/app/views/practices/_form.html.slim
@@ -17,20 +17,20 @@
       .row.js-markdown-parent
         .col-md-6.col-xs-12
             = f.label :description, class: 'a-label'
-            = f.text_area :description, class: 'a-textarea js-warning-form js-markdown markdown-form__text-area', data: { "preview-id": "js-description-preview" }
+            = f.text_area :description, class: 'a-textarea js-warning-form js-markdown markdown-form__text-area', data: { "preview": ".js-description-preview" }
         .col-md-6.col-xs-12
           .a-label
             | プレビュー
-          #js-description-preview.is-long-text-style.markdown-form__preview
+          .js-description-preview.is-long-text-style.markdown-form__preview
     .form-item
       .row.js-markdown-parent
         .col-md-6.col-xs-12
           = f.label :goal, class: 'a-label'
-          = f.text_area :goal, class: 'a-textarea js-warning-form js-markdown markdown-form__text-area', data: { "preview-id": "js-goal-preview" }
+          = f.text_area :goal, class: 'a-textarea js-warning-form js-markdown markdown-form__text-area', data: { "preview": ".js-goal-preview" }
         .col-md-6.col-xs-12
           .a-label
             | プレビュー
-          #js-goal-preview.is-long-text-style.markdown-form__preview
+          .js-goal-preview.is-long-text-style.markdown-form__preview
   .form-actions
     ul.form-actions__items
       li.form-actions__item
