--- a/app/views/admin/artifacts/index.html.slim
+++ b/app/views/admin/artifacts/index.html.slim
@@ -1,4 +1,44 @@
-- @artifacts.each do |artifact|
-  p = artifact.user.login_name
-  p = artifact.practice.title
-  p = artifact.content
+- title t('artifacts')
+header.page-header
+  .container
+    .page-header__container
+      h1.page-header__title
+        = t('artifacts')
+
+.page-body
+  nav.tab-nav
+    .container.is-xs-horizontal-padding-0
+      ul.tab-nav__items
+        li.tab-nav__item
+          = link_to "未確認", admin_artifacts_path, class: "tab-nav__item-link #{params[:done].present? ? '' : 'is-active'}"
+        li.tab-nav__item
+          = link_to "確認済", admin_artifacts_path(done: 'true'), class: "tab-nav__item-link #{params[:done].present? ? 'is-active' : ''}"
+  .container.is-padding-horizontal-0-sm-down
+    .admin-table
+      table.admin-table__table
+        thead.admin-table__header
+          tr.admin-table__labels
+            th.admin-table__label
+              | ユーザー名
+            th.admin-table__label
+              | 課題の提出
+            th.admin-table__label
+              | プラクティス
+            th.admin-table__label
+              | 依頼日
+        tbody.admin-table__items
+          - @artifacts.each do |artifact|
+            tr.admin-table__item
+              td.admin-table__item-value
+                = link_to admin_user_path(artifact.user), class: "admin-table__user" do
+                  = gravatar_tag artifact.user, html: { class: "admin-table__user-icon" }
+                  span.admin-table__user-login-name
+                    = artifact.user.login_name
+                    | （#{artifact.user.full_name}）
+              td.admin-table__item-value.is-text-align-center
+                = link_to t('artifact'), admin_artifact_path(artifact)
+              td.admin-table__item-value
+                = artifact.practice.title
+              td.admin-table__item-value
+                time.practice-submission__created-at(datetime='#{artifact.updated_at.to_datetime}' pubdate='pubdate')
+                  = l artifact.updated_at, format: :date_long_with_time
