--- a/app/views/application/_global_nav.slim
+++ b/app/views/application/_global_nav.slim
@@ -65,6 +65,9 @@ nav.global-nav.js-show-mobile-nav__target.js-show-mobile-nav
             li.global-nav-links__item
               = link_to admin_artifacts_path, class: "global-nav-links__link #{current_link('/admin/artifacts')}" do
                 .global-nav-links__link-icon
+                  - if Artifact.confirmation.exists?
+                    .global-nav-artifact-count
+                      = Artifact.confirmation.count
                   i.fa.fa-check-square
                 .global-nav-links__link-label
                   = t('artifacts')
