プラクティス完了スタンプを実装

--- a/app/assets/stylesheets/blocks/practice/_practice.sass
+++ b/app/assets/stylesheets/blocks/practice/_practice.sass
@@ -25,3 +25,9 @@
   border-top: $background-color solid .0625rem
   &:last-child
     +border-radius(bottom, .25rem)
+
+.practice-item__checked
+  color: $stamp-color
+  +position(absolute, right .25rem, top .25rem)
+  font-size: 1.5rem
+  text-shadow: $main-color .0625rem .0625rem 0
