--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -1,4 +1,4 @@
-- content_for(:page_classes, 'no-header' 'no-footer' 'no-recent-reports')
+- content_for(:page_classes, 'no-header no-footer no-recent-reports')
 
 .auth-form.is-sign-up
   header.auth-form__header
