成果物フォームから成果物を保存出来る処理を実装

--- a/app/views/practices/show.html.slim
+++ b/app/views/practices/show.html.slim
@@ -55,9 +55,10 @@ header.page-header
       - if @practice.reports.any?
         = render 'reports'
 
-    .col-md-12.col-xs-12
-      h2.artifact__title = t('artifact_form')
-      = render 'artifacts/form', artifact: @artifact
+    - if @practice.task?
+      .col-md-12.col-xs-12
+        h2.artifact__title = t('artifact_form')
+        = render 'artifacts/form', artifact: @artifact
 
     .col-xs-12
       .interns-icons
