提出した成果物を確認出来るようにした。

--- a/app/assets/stylesheets/blocks/practice/_practice.sass
+++ b/app/assets/stylesheets/blocks/practice/_practice.sass
@@ -31,3 +31,9 @@
   +position(absolute, right .25rem, top .25rem)
   font-size: 1.5rem
   text-shadow: $main-color .0625rem .0625rem 0
+
+.practice-item__pending
+  color: $warning
+  +position(absolute, right .25rem, top .25rem)
+  font-size: 1.5rem
+  text-shadow: $main-color .0625rem .0625rem 0
