--- a/app/views/artifacts/_form.html.slim
+++ b/app/views/artifacts/_form.html.slim
@@ -1,3 +1,4 @@
+h2.artifact__title = t('artifact_form')
 = render 'application/errors', object: artifact
 = form_for ([@practice, artifact]) do |f|
   .row.js-markdown-parent
