--- a/app/views/practices/show.html.slim
+++ b/app/views/practices/show.html.slim
@@ -56,9 +56,12 @@ header.page-header
         = render 'reports'
 
     - if @practice.task?
-      .col-md-12.col-xs-12
-        h2.artifact__title = t('artifact_form')
-        = render 'artifacts/form', artifact: @artifact
+      - if @practice.exists_artifact?(current_user)
+        .col-md-6.col-xs-12
+          = render 'artifacts/artifact', artifact: @practice.get_artifact(current_user)
+      - else
+        .col-md-12.col-xs-12
+          = render 'artifacts/form', artifact: @artifact
 
     .col-xs-12
       .interns-icons
