syntax highlight追加、スマホで日報を投稿出来ないバグを修正

--- a/app/assets/stylesheets/blocks/report/_report-comment-form.sass
+++ b/app/assets/stylesheets/blocks/report/_report-comment-form.sass
@@ -30,6 +30,8 @@ $report-header-author: 4.75rem
 
 .report-comment-form__textarea
   margin-bottom: .75rem
+  min-height: 9rem
+  overflow: hidden 
 
 .report-comment-form__action
   display: flex
