--- a/app/assets/stylesheets/blocks/report/_report-comments.sass
+++ b/app/assets/stylesheets/blocks/report/_report-comments.sass
@@ -35,6 +35,7 @@ $report-header-author: 3.5rem
   background-color: $base-color
   +padding(horizontal, 1rem)
   border-radius: .25rem
+  min-height: 5rem
   +relative
   +balloon-tail(left $base-color .75rem 1rem, false, top 1.5rem)
   &::after
