--- a/app/views/answers/edit.html.slim
+++ b/app/views/answers/edit.html.slim
@@ -1,6 +1,7 @@
 header.page-header
   .container
-    h2.page-header__title 解答編集
+    .page-header__container
+      h2.page-header__title 解答編集
 
 .page-body
   .container
