--- a/app/views/application/_to_top.slim
+++ b/app/views/application/_to_top.slim
@@ -1,5 +1,2 @@
-.to-top.js-to-top
-  .container
-    .to-top__container
-      a.to-top__link(data-scroll href= "#body")
-        i.fa.fa-arrow-up
+a.to-top.js-to-top(data-scroll href= "#body")
+  i.fa.fa-arrow-up
