--- a/app/assets/stylesheets/blocks/shared/_to-top.sass
+++ b/app/assets/stylesheets/blocks/shared/_to-top.sass
@@ -1,15 +1,4 @@
 .to-top
-  +position(fixed, left 0, bottom 1rem, right 0)
-  opacity: 0
-  transition: opacity .2s ease-in
-  &.is-active
-    opacity: 1
-
-.to-top__container
-  display: flex
-  justify-content: flex-end
-
-.to-top__link
   background: rgba(black, .1)
   display: block
   +size(2.75rem)
@@ -18,7 +7,12 @@
   justify-content: center
   border-radius: 50%
   color: rgba($main-color, .5)
+  +position(fixed, right 15rem, bottom 1rem, 2)
   transition: color .2s ease-in, background-color .2s ease-in
+  opacity: 0
+  transition: opacity .2s ease-in
   &:hover
     background-color: rgba(black, .2)
     color: $main-color
+  &.is-active
+    opacity: 1
