--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -18,14 +18,14 @@
       time.report-comment__created-at(datetime='#{answer.created_at.to_datetime}' pubdate='pubdate')
         = l answer.updated_at, format: :date_long_with_time
     .report-comments__description.js-markdown-view.js-target-blank.is-long-text-style.js-marked
-      = answer.description
-    - if correct_answer.blank? && answer != correct_answer && current_user == question.user
-        .answer-item__choice
-          = link_to question_correct_answer_path(answer.question, answer_id: answer.id, return_to: question_path(answer.question)), data: { confirm: "本当に宜しいですか？" }, method: :post, class: 'is-button-standard-sm-warning' do
-            | 解決にする
-    - if answer.user == current_user
-      .report-comment__actions
-        ul.report-comment__actions-items
+      = raw answer.description
+    .report-comment__actions
+      ul.report-comment__actions-items
+        - if correct_answer.blank? && answer != correct_answer && current_user == question.user
+          li.report-comment__actions-item
+            = link_to question_correct_answer_path(answer.question, answer_id: answer.id, return_to: question_path(answer.question)), data: { confirm: "本当に宜しいですか？" }, method: :post, class: 'is-button-standard-sm-warning' do
+              | 解決にする
+        - if answer.user == current_user
           li.report-comment__actions-item
             = link_to edit_question_answer_path(answer.question, answer, return_to: question_url(answer.question)), class: 'report-comment__actions-item-link' do
               i.fa.fa-pencil
