--- a/app/views/questions/edit.html.slim
+++ b/app/views/questions/edit.html.slim
@@ -1,2 +1,11 @@
-h3= t('editing_question')
-= render 'form', question: @question
+header.page-header
+  .container
+    .page-header__container
+      h2.page-header__title
+        = t('editing_question')
+      = link_to questions_path, class: 'is-button-standard-md-secondary' do
+        i.fa.fa-angle-left
+        = t('to_index_of_questions')
+.page-body
+  .container
+      = render 'form', question: @question
