textareaの中身がhtmlになってしまうのを修正

--- a/app/views/comments/_form.html.slim
+++ b/app/views/comments/_form.html.slim
@@ -5,7 +5,7 @@
         .form-group
           label.a-label
             | 内容
-          = f.text_area :description, required: true, class: 'a-textarea js-warning-form js-markdown markdown-form__text-area', data: { "preview": ".js-preview" }
+          = f.text_area :description, required: true, class: 'a-textarea js-warning-form markdown-form__text-area', data: { "preview": ".js-preview" }
       .col-md-6.col-xs-12
         label.a-label
           | プレビュー
