--- a/app/views/questions/_form.html.slim
+++ b/app/views/questions/_form.html.slim
@@ -12,7 +12,7 @@
         .row.js-markdown-parent
           .col-md-6.col-xs-12
             = f.label :description, class: 'a-label'
-            = f.text_area :description, class: 'a-text-input markdown-form__text-area js-warning-form js-markdown', data: { "preview": ".js-preview" }
+            = f.text_area :description, class: 'a-text-input markdown-form__text-area js-warning-form', data: { "preview": ".js-preview" }
           .col-md-6.col-xs-12
             .a-label
               | プレビュー
