--- a/app/views/pages/_form.html.slim
+++ b/app/views/pages/_form.html.slim
@@ -10,7 +10,7 @@
     .row.js-markdown-parent
       .col-md-6.col-xs-12
         = f.label :body, class: 'a-label'
-        = f.text_area :body, class: 'a-textarea js-warning-form js-markdown markdown-form__text-area', data: { "preview": ".js-preview" }
+        = f.text_area :body, class: 'a-textarea js-warning-form markdown-form__text-area', data: { "preview": ".js-preview" }
       .col-md-6.col-xs-12
         .a-label
           | プレビュー
