--- a/app/views/practices/show.html.slim
+++ b/app/views/practices/show.html.slim
@@ -16,12 +16,12 @@ header.page-header
       .practice-content
         header.practice-content__header
           h2.practice-content__title= t('helpers.label.practice.description')
-        .practice-content__body.is-practice.js-markdown-view.js-target-blank.is-long-text-style.js-markdown
+        .practice-content__body.is-practice.js-markdown-view.js-target-blank.is-long-text-style
           = @practice.description
       .practice-content
         .practice-content__header
           h2.practice-content__title= t('helpers.label.practice.goal')
-        .practice-content__body.is-goal.js-markdown-view.js-target-blank.is-long-text-style.js-markdown
+        .practice-content__body.is-goal.js-markdown-view.js-target-blank.is-long-text-style
           = @practice.goal
 
       .page-actions
